force-app/main/default/objects/pensionista__c/pensionista__c.object-meta.xml
<CustomObject>
    <description>Datos sobre los pensionistas</description>
    <label>pensionista</label>
    <nameField>
        <label>Nombre de pensionista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>pensionistas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>