force-app/main/default/objects/pensionista__c/fields/Anos_Cotizados_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Anos_Cotizados_Decimal__c</fullName>
    <label>Anos_Cotizados_Decimal</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>