force-app/main/default/objects/pensionista__c/fields/Anos_Enteros_Cotizados__c.field-meta.xml
<CustomField>
    <fullName>Anos_Enteros_Cotizados__c</fullName>
    <label>Anos_Enteros_Cotizados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>