force-app/main/default/objects/pensionista__c/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <label>Apellidos</label>
    <type>TextArea</type>
</CustomField>