force-app/main/default/objects/pensionista__c/fields/Base_Reguladora__c.field-meta.xml
<CustomField>
    <fullName>Base_Reguladora__c</fullName>
    <label>Base_Reguladora</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>