force-app/main/default/objects/pensionista__c/fields/Bases_de_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Bases_de_Cotizacion__c</fullName>
    <label>Bases_de_Cotizacion</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>