force-app/main/default/objects/pensionista__c/fields/bueno__c.field-meta.xml
<CustomField>
    <fullName>bueno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bueno</label>
    <type>Checkbox</type>
</CustomField>