force-app/main/default/objects/pensionista__c/fields/Comunidad_Autonoma__c.field-meta.xml
<CustomField>
    <fullName>Comunidad_Autonoma__c</fullName>
    <label>Comunidad_Autonoma</label>
    <type>TextArea</type>
</CustomField>