force-app/main/default/objects/pensionista__c/fields/Fecha_de_Jubilacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Jubilacion__c</fullName>
    <label>Fecha_de_Jubilacion</label>
    <type>Date</type>
</CustomField>