force-app/main/default/objects/pensionista__c/fields/Grupo_Edades__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Edades__c</fullName>
    <label>Grupo_Edades</label>
    <type>TextArea</type>
</CustomField>