force-app/main/default/objects/pensionista__c/fields/Invalidez__c.field-meta.xml
<CustomField>
    <fullName>Invalidez__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalidez</label>
    <type>Checkbox</type>
</CustomField>