force-app/main/default/objects/pensionista__c/fields/Meses_Cotizados__c.field-meta.xml
<CustomField>
    <fullName>Meses_Cotizados__c</fullName>
    <label>Meses_Cotizados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>