force-app/main/default/objects/pensionista__c/fields/Numero_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Numero_Identificacion__c</fullName>
    <label>Numero_Identificacion</label>
    <type>TextArea</type>
</CustomField>