force-app/main/default/objects/pensionista__c/fields/Pension__c.field-meta.xml
<CustomField>
    <fullName>Pension__c</fullName>
    <label>Pension</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>