force-app/main/default/objects/pensionista__c/fields/Pension_Final__c.field-meta.xml
<CustomField>
    <fullName>Pension_Final__c</fullName>
    <label>Pension_Final</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>