force-app/main/default/objects/pensionista__c/fields/Total_Meses_Cotizados__c.field-meta.xml
<CustomField>
    <fullName>Total_Meses_Cotizados__c</fullName>
    <label>Total_Meses_Cotizados</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>