force-app/main/default/objects/pensionista__c/fields/vivo__c.field-meta.xml
<CustomField>
    <fullName>vivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>vivo</label>
    <type>Checkbox</type>
</CustomField>